box skeleton set up on index.html

--- a/index.html
+++ b/index.html
@@ -1,25 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Alien Shooter</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <div class="title-container">
-    <h1 class="title">Alien Shooter</h1>
-  </div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Alien Shooter</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="title-container">
+      <h1 class="title">Alien Shootout</h1>
+    </div>
 
-  <canvas class="gamebox">
+    <div class="gamebox">
+      <div class="player-container">
+        <h2 class="player-label">Player 1</h2>
+        <div class="player"></div>
+      </div>
+      <div class="alien-container">
+        <h2 class="alien-label">Aliens</h2>
+        <div class="aliens">
+          <!-- <div class="alien"></div>
+          <div class="alien"></div>
+          <div class="alien"></div>
+          <div class="alien"></div>
+          <div class="alien"></div>
+          <div class="alien"></div> -->
+        </div>
+      </div>
+    </div>
 
-  </canvas>
-
-  <div class="img-source">
-    <img src="" alt="" class="uss">
-    <img src="" alt="" class="alien">
-  </div>
-  <script src="app.js"></script>
-</body>
+    <div class="img-source">
+      <img src="" alt="" class="uss" />
+      <img src="" alt="" class="alien" />
+    </div>
+    <script src="app.js"></script>
+  </body>
 </html>
