--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <h2 class="player-label">Player 1</h2>
         <div class="player"></div>
       </div>
+      <div class="controls"></div>
       <div class="alien-container">
         <h2 class="alien-label">Aliens</h2>
         <div class="aliens">
@@ -30,10 +31,14 @@
       </div>
     </div>
 
+    <div class="console">
+      login:
+    </div>
+
     <div class="img-source">
       <img src="" alt="" class="uss" />
       <img src="" alt="" class="alien" />
     </div>
-    <script src="app.js"></script>
+    <script src="app.js" type="module"></script>
   </body>
 </html>
