battle button wired

--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
         <h2 class="player-label">Player 1</h2>
         <div class="player"></div>
       </div>
-      <div class="controls"></div>
+      <div class="controls">
+        <button class="battle-btn">battle</button>
+      </div>
       <div class="alien-container">
         <h2 class="alien-label">Aliens</h2>
         <div class="aliens">
