alien boxes 'spawning' into aliens-container

--- a/index.html
+++ b/index.html
@@ -33,8 +33,11 @@
       </div>
     </div>
 
-    <div class="console">
-      login:
+    <div class="console-container">
+      <h2 class="console-label">spacelog&#8482;</h2>
+      <div class="console">
+        login:
+      </div>
     </div>
 
     <div class="img-source">
