added num input to choose num aliens. still only n-1 aliens displaying

--- a/index.html
+++ b/index.html
@@ -18,6 +18,16 @@
         <div class="player"></div>
       </div>
       <div class="controls">
+        <label for="num-aliens" class="num-aliens-lbl">
+          alien count
+        </label>
+        <input
+          type="number"
+          name="alien-count"
+          id="num-aliens"
+          value="6"
+          placeholder="how many aliens?"
+        />
         <button class="battle-btn">battle</button>
       </div>
       <div class="alien-container">
