results (won/lost etc) displaying. aliens turning red when dead. still missing data in last alien box

--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
           placeholder="how many aliens?"
         />
         <button class="battle-btn">battle</button>
+
+        <div class="results">
+          
+        </div>
       </div>
       <div class="alien-container">
         <h2 class="alien-label">Aliens</h2>
