about to move each fight into separate fn()

--- a/index.html
+++ b/index.html
@@ -29,10 +29,12 @@
           placeholder="how many aliens?"
         />
         <button class="battle-btn">battle</button>
-
-        <div class="results">
-          
+        <div class="battle-options">
+          <button class="retreat">retreat</button>
+          <button class="continue">attack</button>
         </div>
+
+        <div class="results"></div>
       </div>
       <div class="alien-container">
         <h2 class="alien-label">Aliens</h2>
@@ -49,15 +51,15 @@
 
     <div class="console-container">
       <h2 class="console-label">spacelog&#8482;</h2>
-      <div class="console">
+      <code class="console">
         login:
-      </div>
+      </code>
     </div>
 
     <div class="img-source">
       <img src="" alt="" class="uss" />
       <img src="" alt="" class="alien" />
     </div>
-    <script src="app.js" type="module"></script>
+    <script defer src="app.js" type="module"></script>
   </body>
 </html>
