--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Alien Shooter</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -17,25 +23,43 @@
         <h2 class="player-label">Player 1</h2>
         <div class="player"></div>
       </div>
-      <div class="controls">
-        <label for="num-aliens" class="num-aliens-lbl">
-          alien count
-        </label>
-        <input
-          type="number"
-          name="alien-count"
-          id="num-aliens"
-          value="6"
-          placeholder="how many aliens?"
-        />
-        <button class="battle-btn">battle</button>
-        <div class="battle-options">
-          <button class="retreat">retreat</button>
-          <button class="continue">attack</button>
+      <div class="card controls">
+        <div class="card-body controls-inner">
+          <div class="count-div">
+            <h5 class="card-title num-aliens-lbl">
+              alien count
+            </h5>
+            <input
+              type="number"
+              name="alien-count"
+              id="num-aliens"
+              value="6"
+              placeholder="how many aliens?"
+            />
+          </div>
+
+          <div class="btns" role="group" aria-label="Basic example">
+            <button type="button" class="btn btn-secondary battle-btn">
+              battle
+            </button>
+            <button type="button" class="btn btn-secondary retreat">
+              retreat
+            </button>
+            <button type="button" class="btn btn-secondary continue">
+              attack
+            </button>
+          </div>
+          <!-- 
+          <button class="battle-btn">battle</button>
+          <div class="battle-options">
+            <button class="retreat">retreat</button>
+            <button class="continue">attack</button>
+          </div> -->
         </div>
 
         <div class="results"></div>
       </div>
+
       <div class="alien-container">
         <h2 class="alien-label">Aliens</h2>
         <div class="aliens">
@@ -59,7 +83,14 @@
     <div class="img-source">
       <img src="" alt="" class="uss" />
       <img src="" alt="" class="alien" />
+      <img src="X.png" alt="" class="x-img" />
     </div>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+      crossorigin="anonymous"
+    ></script>
     <script defer src="app.js" type="module"></script>
   </body>
 </html>
