reworked to keep defeated aliens in array, just marking them not alive. btw, don't use exclamation points in git commit messages, apparently

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
             />
           </div>
 
+          <!-- ==== THE BUTTONS ==== -->
           <div class="btns" role="group" aria-label="Basic example">
             <button type="button" class="btn btn-secondary battle-btn">
               battle
@@ -84,6 +85,7 @@
       <img src="" alt="" class="uss" />
       <img src="" alt="" class="alien" />
       <img src="X.png" alt="" class="x-img" />
+      <img src="sploded.png" alt="" class="sploded" />
     </div>
 
     <script
