there are some further refinements possible, but this is a submission

--- a/index.html
+++ b/index.html
@@ -50,12 +50,6 @@
               attack
             </button>
           </div>
-          <!-- 
-          <button class="battle-btn">battle</button>
-          <div class="battle-options">
-            <button class="retreat">retreat</button>
-            <button class="continue">attack</button>
-          </div> -->
         </div>
 
         <div class="results"></div>
@@ -63,13 +57,9 @@
 
       <div class="alien-container">
         <h2 class="alien-label">Aliens</h2>
+        <div class="in-game-msg"></div>
         <div class="aliens">
-          <!-- <div class="alien"></div>
-          <div class="alien"></div>
-          <div class="alien"></div>
-          <div class="alien"></div>
-          <div class="alien"></div>
-          <div class="alien"></div> -->
+
         </div>
       </div>
     </div>
